--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inflables YAFER | Inicio</title>
   <link rel="stylesheet" href="assets/estilos.css">
+  <link rel="icon" href="imagenes/WhatsApp Image 2025-08-27 at 8.08.03 PM.jpeg">
 </head>
 <style>
   body {
@@ -30,7 +32,8 @@ header nav a:hover {
 </style>
 <body>
   <header>
-    <div class="logo">Inflables <span>YAFER</span></div>
+    
+    <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="servicios.html">Servicios</a>
@@ -70,7 +73,8 @@ header nav a:hover {
   </main>
 
   <footer>
-    <p>Inflables YAFER " Mejor opción"</p>
+    <p>Inflables YAFER " Haz de cada
+celebración un gran salto"</p>
   </footer>
 
   <!-- Botón flotante de WhatsApp -->
