--- a/servicios.html
+++ b/servicios.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Inflables YAFER | Servicios</title>
   <link rel="stylesheet" href="assets/estilos.css">
+  <link rel="icon" href="imagenes/WhatsApp Image 2025-08-27 at 8.08.03 PM.jpeg">
 </head>
 <body>
   <header>
-     <div class="logo">Inflables <span>YAFER</span></div>
+    <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="servicios.html" class="activo">Servicios</a>
@@ -59,7 +60,7 @@ header nav a:hover {
         <div class="card">
           <img src="imagenes/patrol.jpeg" alt="Paw Patrol">
           <span class="tag">Paw Patrol </span>
-          <h3> . Paw Patrol 
+          <h3>  Paw Patrol 
           Diversión asegurada con los cachorros más valientes de la Patrulla Canina.
            Ideal para los más pequeños que aman a Chase, Marshall y compañía.</h3>
           <p>Recomendado: 2 a 8 años.</p>
@@ -102,7 +103,7 @@ header nav a:hover {
           <span class="tag">Frozen</span>
           <h3> Con Elsa, Anna y Olaf la diversión nunca se derrite.
              Un inflable mágico para los fans de esta gran aventura.</h3>
-          <p>Recomendado: 2 a 9 años.</p>
+          <p>Recomendado: 2 a 14 años.</p>
           <p class="precio">precio  900 MXN / día</p>
           <a href="https://wa.me/7351079984?text=Hola!%20Quiero%20rentar%20el%20inflable%20Frozen" class="btn-whatsapp">Reservar por WhatsApp</a>
         </div>
@@ -132,7 +133,7 @@ header nav a:hover {
           <span class="tag"> Peppa Pig</span>
           <h3> Perfecto para los más chiquitos. Peppa y George 
             acompañan a los niños en un inflable seguro y muy colorido.</h3>
-          <p>Recomendado: 2 a 6 años.</p>
+          <p>Recomendado: 2 a 14 años.</p>
           <p class="precio">precio  900 MXN / día</p>
           <a href="https://wa.me/7351079984?text=Hola!%20Quiero%20rentar%20el%20inflable%20Peppa%20pig" class="btn-whatsapp">Reservar por WhatsApp</a>
         </div>
@@ -184,7 +185,8 @@ header nav a:hover {
   </main>
 
   <footer>
-    <p>Inflables YAFER</p>
+    <p>Inflables YAFER " Haz de cada
+celebración un gran salto"</p>
   </footer>
 </body>
 </html>
