--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Inflables YAFER | Contacto</title>
   <link rel="stylesheet" href="assets/estilos.css">
+  <link rel="icon" href="imagenes/WhatsApp Image 2025-08-27 at 8.08.03 PM.jpeg">
   
    <style>
   body {
@@ -120,6 +121,9 @@ header nav a:hover {
 
 <body>
   <header>
+    <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
+    <nav>
+
     <nav>
       <a href="index.html">Inicio</a>
       <a href="servicios.html">Servicios</a>
@@ -195,7 +199,8 @@ header nav a:hover {
   </main>
 
   <footer>
-    <p> Inflables YAFER</p>
+    <p> Inflables YAFER " Haz de cada
+celebración un gran salto"</p>
   </footer>
 </body>
 </html>
