--- a/galeria.html
+++ b/galeria.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Inflables YAFER | Galería</title>
   <link rel="stylesheet" href="assets/estilos.css">
+  <link rel="icon" href="imagenes/WhatsApp Image 2025-08-27 at 8.08.03 PM.jpeg">
 </head>
 <body>
   <header>
-    <div class="logo">Inflables <span>YAFER</span></div>
+    <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="servicios.html">Servicios</a>
@@ -53,7 +54,8 @@ header nav a:hover {
   </main>
 
   <footer>
-    <p> Inflables YAFER</p>
+    <p> Inflables YAFER " Haz de cada
+celebración un gran salto"</p>
   </footer>
 </body>
 </html>
