Agrandé el encabezado rojo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 }
 header {
   background-color:  #ff0000e7; /* amarillo */
-  padding: 15px 20px;
+      min-height: 130px;
+  padding: 30px 20px;
   text-align: center;
 }
 header nav a {
