Agrandé el beneficio

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
   
 
   <main>
-    <section class="hero">
-      <div class="hero-text">
+    
+      <section class="seccion-principal">
+        
+      <div class="seccion-principal">
         <span class="tag">Renta de inflables</span>
-        <h1>Haz de cada<br>celebración <span>un gran salto</span></h1>
+        <h1><i>HAZ DE CADA<br>CELEBRACIÓN <span>UN GRAN SALTO </span></i></h1>
         <p>
           Renta de inflables YAFER <br>
           Instalación segura, limpieza garantizada y servicio puntual.
@@ -45,16 +47,18 @@
         </div>
       </div>
 
-      <div class="benefits">
-        <h3>¿Por qué elegirnos?</h3>
-        <ul>
-          <li>Instalación y desmontaje incluidos</li>
-          <li>Limpieza y sanitización antes de cada evento</li>
-          <li>Entrega puntual </li>
-          <li>Atención directa por WhatsApp</li>
-        </ul>
-      </div>
-    </section>
+  
+  
+  <div class="beneficios">
+    <h3>¿Por qué elegirnos?</h3>
+    <ul>
+      <li>Inflables seguros y de calidad</li>
+      <li>Precios accesibles</li>
+      <li>Entrega y recogida a domicilio</li>
+    </ul>
+  </div>
+</section>
+
   </main>
 
   <footer>
