Agrandé el benefici

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   margin: 0;
   font-family: Arial, sans-serif;
   }
+  header {
+  background-color:  #ff0000e7; /* amarillo */
+  padding: 20px 190px;
+  text-align: center;
+  }
 </style>
-<body>
+
   <header>
     
     <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
