--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
   background-color:  #ff0000e7; /* amarillo */
   padding: 20px 190px;
   text-align: center;
+
   }
+  nav ul {
+  list-style: none;      /* Quita viñetas */
+  padding: 0;
+  margin: 0;
+  display: flex;         /* Coloca los <li> en fila */
+  justify-content: center; /* Centra horizontalmente */
+}
+
+nav ul li {
+  margin: 0 15px;        /* Espacio entre los enlaces */
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;          /* Cambia según el color que quieras */
+  font-weight: bold;
+}
 </style>
 
   <header>
