--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a href="contacto.html" class="btn btn-primary">Pedir cotización</a>
           <a href="servicios.html" class="btn btn-outline">Ver inflables</a>
         </div>
+        <div>
+          <a href="contacto.html" class="btn-reservar">Reservar</a>
+        </div>
       </div>
 
   
@@ -69,7 +72,7 @@
   <footer>
     <p>Inflables YAFER " Haz de cada
 celebración un gran salto"</p>
-<a href="contacto.html" class="btn-reservar">Reservar</a>
+
   </footer>
 
   <!-- Botón flotante de WhatsApp -->
