correcion de mi  viñetas

--- a/Preguntas.html
+++ b/Preguntas.html
@@ -33,11 +33,11 @@ header nav a:hover {
   <header>
     <div class="logo" > <img src="imagenes/WhatsApp Image 2025-08-27 at 8.08.02 PM (1).jpeg" alt="Inicio" width="70" height="70">Inflables <span>YAFER</span></div>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="galeria.html">Galería</a>
-      <a href="Preguntas.html">Preguntas Frecuentes</a>
-      <a href="contacto.html">Contacto</a>
+      <a href="index.html">• Inicio</a>
+      <a href="servicios.html">• Servicios</a>
+      <a href="galeria.html">• Galería</a>
+      <a href="Preguntas.html">• Preguntas Frecuentes</a>
+      <a href="contacto.html">• Contacto</a>
     </nav>
   </header>
 
