--- a/contacto.html
+++ b/contacto.html
@@ -125,11 +125,11 @@ header nav a:hover {
     <nav>
 
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="galeria.html">Galería</a>
-      <a href="Preguntas.html">Preguntas Frecuentes</a>
-      <a href="contacto.html">Contacto</a>
+      <a href="index.html">• Inicio</a>
+      <a href="servicios.html">• Servicios</a>
+      <a href="galeria.html">• Galería</a>
+      <a href="Preguntas.html">• Preguntas Frecuentes</a>
+      <a href="contacto.html">• Contacto</a>
     </nav>
   </header>
 
