--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Renta de inflables YAFFER - Inflables seguros, económicos y divertidos para tus fiestas.">
+  <meta name="keywords" content="inflables, renta de inflables, fiestas, brinca , Yafer">
+  <meta name="author" content="Inflables YAFER">
+  <title>Inflables YAFFER - Renta de inflables</title>
+</head>
   <title>Inflables YAFER | Inicio</title>
   <link rel="stylesheet" href="assets/estilos.css">
   <link rel="icon" href="imagenes/WhatsApp Image 2025-08-27 at 8.08.03 PM.jpeg">
