--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <head>
   <meta charset="UTF-8">
+    <meta name="google-site-verification" content="qS1bHaZKuXvLBO4ZBzhSyiaNOg3tAodt0VgADFHRJXo" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Renta de inflables YAFFER - Inflables seguros, económicos y divertidos para tus fiestas.">
   <meta name="keywords" content="inflables, renta de inflables, fiestas, brinca , Yafer">
